src/test/deca/context/valid/thibault/optimisation/testOpt3.deca
{
	int a;
	float b;
	boolean c;

	a=6+5;
	b=a-0;
}
