src/test/deca/context/invalid/pierre/objects/typeToClass.deca
class A {
    int b;
}
{
    A a = new A();
    a = (A)(a.b);
}
